# fastapi-audio-splitter

./: .gitignore  pyproject.toml
app/: index.py  utils.py
